cc_binary(
    name = "asan",
    srcs = ["main.cc"],
    copts = [
        "-fsanitize=address",
    ],
    linkopts = [
        "/wholearchive:clang_rt.asan-x86_64.lib",
        "/wholearchive:clang_rt.asan_cxx-x86_64.lib",
    ],
    linkstatic = True,
    linkshared = True,
)

platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@bazel_tools//tools/cpp:clang-cl",
    ],
)
